# test-poetry

./: .gitignore  pyproject.toml  requirements.txt
polls/: settings.py
