[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["harryjjun <wnsgh6315@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
